# bangladesh-serosurveillance-luminex-qc

./: .Rhistory  .gitignore  BANGLADESH_TODO.html  BANGLADESH_TODO.md  PLATE_RUN_FINDINGS.html  PLATE_RUN_FINDINGS.md  README.md  SPECIFICATION.md  UVIRA_TODO.html  UVIRA_TODO.md  bangladesh-serosurveillance-luminex-qc-win.spec  bangladesh-serosurveillance-luminex-qc.spec  pyproject.toml  uvira-luminex-qc-win.spec  uvira-luminex-qc.spec
.github/workflows/: build.yml
legacy/: UVIRA_TODO.html
src/: app.py  classify.py  config.py  main.py  parse_layout.py  parse_xponent.py  pipeline.py  plate_summary.py  qc_background.py  qc_beads.py  qc_history.py  qc_nc.py  qc_pc_replicates.py  qc_pc_single_point.py  qc_standard_curve.py  report.py  settings.py
templates/: report.html
templates/web/: index.html  settings.html
