[project]
name = "uvira-luminex-qc"
version = "0.9.0"
description = "QC tool for 200-plex Uvira Luminex immunoassays on Intelliflex"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "scipy>=1.11",
    "plotly>=5.18",
    "Jinja2>=3.1",
    "openpyxl>=3.1",
    "flask>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0", "pillow>=10.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
